<resources>
    <string name="app_name">WorkTeams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="define_your_objectives">Define your Objectives</string>
    <string name="clarify_goals">Clarify goals, break down tasks, track progress, achieve success efficiently.</string>
    <string name="act_task">Break them down into actionable tasks</string>
    <string name="conv_goals">Convert goals into actionable steps for streamlined progress tracking.</string>
    <string name="track_prog">Track your progress</string>
    <string name="mon_prog">Monitor progress, milestones, and achievements for continuous improvement tracking.</string>
    <string name="get_started">Get started</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_us">Join Us</string>
    <string name="or_register_with">Or Register with</string>
    <string name="already_have_an_account">Already have an account? Login Now</string>
    <string name="welcome_back">Welcome back! Glad to see you, Again!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_an_account">Don’t have an account? Register Now</string>
    <string name="worry">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="receive_code">Didn\'t receive code? Resend</string>
    <string name="create_new_password">Create new password</string>
    <string name="new_pass_text">Your new password must be unique from those previously used.</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Password Changed</string>
    <string name="changed_success">Your password has been changed successfully.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="success_mark">Success Mark</string>
    <string name="work_teams">WorkTeams</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="username_tag">USERNAME</string>
    <string name="token_tag">TOKEN</string>
</resources>